@@ -13,14 +13,14 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.context.properties.EnableConfigurationProperties;
 import org.springframework.http.HttpHeaders;
 import org.springframework.mock.web.MockHttpServletResponse;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.test.context.TestPropertySource;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 
 import java.time.Instant;
 import java.util.Arrays;
@@ -32,6 +32,31 @@ import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
+
+// =============================================================================
+// Shared JWT builder
+// =============================================================================
+
+class JwtTestBuilder {
+
+    static String build(Long exp, String issuer, String scopeJson) {
+        String header = Base64.getUrlEncoder().withoutPadding()
+            .encodeToString("{\"alg\":\"RS256\"}".getBytes());
+        String payloadJson = "{\"sub\":\"user@example.com\""
+            + (exp      != null ? ",\"exp\":"   + exp              : "")
+            + (issuer   != null ? ",\"iss\":\"" + issuer + "\""    : "")
+            + (scopeJson != null ? ",\"scp\":"  + scopeJson        : "")
+            + "}";
+        String payload = Base64.getUrlEncoder().withoutPadding()
+            .encodeToString(payloadJson.getBytes());
+        return header + "." + payload + ".fakesig";
+    }
+
+    static String valid(String issuer)   { return build(Instant.now().plusSeconds(3600).getEpochSecond(), issuer, null); }
+    static String expired(String issuer) { return build(Instant.now().minusSeconds(3600).getEpochSecond(), issuer, null); }
+    static String noExp(String issuer)   { return build(null, issuer, null); }
+    static String noIssuer()             { return build(Instant.now().plusSeconds(3600).getEpochSecond(), null, null); }
+}
 
 // =============================================================================
 // OktaPropertiesTest
@@ -46,109 +71,228 @@ class OktaPropertiesTest {
 
     @Nested
     class Defaults {
-        @Test void issuerValidation_defaultsToTrue()  { assertTrue(props.isIssuerValidation()); }
-        @Test void validationType_defaultsToUri()     { assertEquals("uri", props.getValidationType()); }
-        @Test void audience_defaultsToNull()          { assertNull(props.getAudience()); }
-        @Test void issuerUris_defaultsToNull()        { assertNull(props.getIssuerUris()); }
-        @Test void issuerHostPattern_defaultsToNull() { assertNull(props.getIssuerHostPattern()); }
+        @Test void issuerValidation_defaultsToTrue()     { assertTrue(props.isIssuerValidation()); }
+        @Test void validationType_defaultsToUri()        { assertEquals("uri", props.getValidationType()); }
+        @Test void audience_defaultsToNull()             { assertNull(props.getAudience()); }
+        @Test void issuerUris_defaultsToNull()           { assertNull(props.getIssuerUris()); }
+        @Test void issuerHostPatterns_defaultsToNull()   { assertNull(props.getIssuerHostPatterns()); }
     }
 
     @Nested
     class Setters {
+        @Test void audience()               { props.setAudience("abc"); assertEquals("abc", props.getAudience()); }
+        @Test void issuerValidationFalse()  { props.setIssuerValidation(false); assertFalse(props.isIssuerValidation()); }
+        @Test void validationTypePattern()  { props.setValidationType("pattern"); assertEquals("pattern", props.getValidationType()); }
+        @Test void validationTypeDynamic()  { props.setValidationType("dynamic"); assertEquals("dynamic", props.getValidationType()); }
+
         @Test
-        void setAndGetAudience() {
-            props.setAudience("abc-application");
-            assertEquals("abc-application", props.getAudience());
+        void issuerHostPatterns_multipleValues() {
+            List<String> patterns = List.of("*.abc.com", "*.oktapreview.com", "uatabctech.oktapreview.com");
+            props.setIssuerHostPatterns(patterns);
+            assertEquals(3, props.getIssuerHostPatterns().size());
+            assertEquals("*.abc.com", props.getIssuerHostPatterns().get(0));
+            assertEquals("*.oktapreview.com", props.getIssuerHostPatterns().get(1));
+            assertEquals("uatabctech.oktapreview.com", props.getIssuerHostPatterns().get(2));
         }
 
         @Test
-        void setIssuerValidationFalse() {
-            props.setIssuerValidation(false);
-            assertFalse(props.isIssuerValidation());
+        void issuerHostPatterns_singleValue() {
+            props.setIssuerHostPatterns(List.of("*.abc.com"));
+            assertEquals(1, props.getIssuerHostPatterns().size());
         }
 
         @Test
-        void setValidationTypePattern() {
-            props.setValidationType("pattern");
-            assertEquals("pattern", props.getValidationType());
-        }
-
-        @Test
-        void setAndGetIssuerUris() {
-            List<String> uris = List.of("https://dev.okta.com/oauth2/default");
-            props.setIssuerUris(uris);
-            assertEquals(uris, props.getIssuerUris());
-        }
-
-        @Test
-        void setAndGetIssuerHostPattern() {
-            props.setIssuerHostPattern("*.abc.com");
-            assertEquals("*.abc.com", props.getIssuerHostPattern());
-        }
-
-        @Test
-        void overwriteAudience() {
-            props.setAudience("old");
-            props.setAudience("abc-application");
-            assertEquals("abc-application", props.getAudience());
-        }
-
-        @Test
-        void overwriteIssuerUris() {
-            props.setIssuerUris(List.of("https://old.okta.com/oauth2/default"));
-            props.setIssuerUris(List.of("https://new.okta.com/oauth2/default"));
-            assertEquals("https://new.okta.com/oauth2/default", props.getIssuerUris().get(0));
-        }
-
-        @Test
-        void overwriteIssuerHostPattern() {
-            props.setIssuerHostPattern("*.old.com");
-            props.setIssuerHostPattern("*.abc.com");
-            assertEquals("*.abc.com", props.getIssuerHostPattern());
+        void issuerUris_multipleValues() {
+            props.setIssuerUris(List.of("https://dev.okta.com/oauth2/default", "https://prod.okta.com/oauth2/default"));
+            assertEquals(2, props.getIssuerUris().size());
         }
     }
 }
 
 // =============================================================================
-// ValidationResultTest
+// OktaPropertiesBindingTest — @SpringExtension only (no server startup)
 // =============================================================================
 
-class ValidationResultTest {
+@ExtendWith(SpringExtension.class)
+@EnableConfigurationProperties(OktaProperties.class)
+@TestPropertySource(properties = {
+    "okta.audience=abc-application",
+    "okta.issuer-validation=false"
+})
+class Option1BindingTest {
 
-    @Test
-    void success_isValidTrue() {
-        assertTrue(ValidationResult.success(Map.of("sub", "user@example.com")).isValid());
+    @Autowired private OktaProperties props;
+
+    @Test void issuerValidationFalse()  { assertFalse(props.isIssuerValidation()); }
+    @Test void audienceIsBound()        { assertEquals("abc-application", props.getAudience()); }
+    @Test void issuerUrisIsNull()       { assertNull(props.getIssuerUris()); }
+    @Test void patternsIsNull()         { assertNull(props.getIssuerHostPatterns()); }
+}
+
+@ExtendWith(SpringExtension.class)
+@EnableConfigurationProperties(OktaProperties.class)
+@TestPropertySource(properties = {
+    "okta.audience=abc-application",
+    "okta.issuer-validation=true",
+    "okta.validation-type=uri",
+    "okta.issuer-uris[0]=https://dev.okta.com/oauth2/default",
+    "okta.issuer-uris[1]=https://prod.okta.com/oauth2/default"
+})
+class Option2BindingTest {
+
+    @Autowired private OktaProperties props;
+
+    @Test void validationTypeIsUri()     { assertEquals("uri", props.getValidationType()); }
+    @Test void issuerUrisCount()         { assertEquals(2, props.getIssuerUris().size()); }
+    @Test void patternsIsNull()          { assertNull(props.getIssuerHostPatterns()); }
+}
+
+@ExtendWith(SpringExtension.class)
+@EnableConfigurationProperties(OktaProperties.class)
+@TestPropertySource(properties = {
+    "okta.audience=abc-application",
+    "okta.issuer-validation=true",
+    "okta.validation-type=pattern",
+    "okta.issuer-host-patterns[0]=*.abc.com",
+    "okta.issuer-host-patterns[1]=*.oktapreview.com",
+    "okta.issuer-host-patterns[2]=uatabctech.oktapreview.com"
+})
+class Option3BindingTest {
+
+    @Autowired private OktaProperties props;
+
+    @Test void validationTypeIsPattern()    { assertEquals("pattern", props.getValidationType()); }
+    @Test void patternsCount()              { assertEquals(3, props.getIssuerHostPatterns().size()); }
+    @Test void firstPattern()              { assertEquals("*.abc.com", props.getIssuerHostPatterns().get(0)); }
+    @Test void secondPattern()             { assertEquals("*.oktapreview.com", props.getIssuerHostPatterns().get(1)); }
+    @Test void thirdPatternExact()         { assertEquals("uatabctech.oktapreview.com", props.getIssuerHostPatterns().get(2)); }
+    @Test void issuerUrisIsNull()           { assertNull(props.getIssuerUris()); }
+}
+
+@ExtendWith(SpringExtension.class)
+@EnableConfigurationProperties(OktaProperties.class)
+@TestPropertySource(properties = {
+    "okta.audience=abc-application",
+    "okta.issuer-validation=true",
+    "okta.validation-type=dynamic",
+    "okta.issuer-host-patterns[0]=*.abc.com",
+    "okta.issuer-host-patterns[1]=*.oktapreview.com",
+    "okta.issuer-host-patterns[2]=uatabctech.oktapreview.com"
+})
+class Option4BindingTest {
+
+    @Autowired private OktaProperties props;
+
+    @Test void validationTypeIsDynamic()    { assertEquals("dynamic", props.getValidationType()); }
+    @Test void patternsCount()              { assertEquals(3, props.getIssuerHostPatterns().size()); }
+    @Test void firstPattern()              { assertEquals("*.abc.com", props.getIssuerHostPatterns().get(0)); }
+    @Test void issuerUrisIsNull()           { assertNull(props.getIssuerUris()); }
+}
+
+// =============================================================================
+// JwtUtilsTest
+// =============================================================================
+
+class JwtUtilsTest {
+
+    @Nested
+    class DecodePayload {
+        @Test void validJwt_decodesSubject()         { assertEquals("user@example.com", JwtUtils.decodePayload(JwtTestBuilder.valid("https://dev.abc.com/oauth2/default")).get("sub")); }
+        @Test void twoParts_throwsIllegalArgument()  { assertThrows(IllegalArgumentException.class, () -> JwtUtils.decodePayload("header.payload")); }
+        @Test void fourParts_throwsIllegalArgument() { assertThrows(IllegalArgumentException.class, () -> JwtUtils.decodePayload("a.b.c.d")); }
+        @Test void invalidBase64_throwsException()   { assertThrows(IllegalArgumentException.class, () -> JwtUtils.decodePayload("hdr.!!invalid!!.sig")); }
     }
 
-    @Test
-    void success_claimsPopulated() {
-        Map<String, Object> claims = Map.of("sub", "user@example.com");
-        assertEquals(claims, ValidationResult.success(claims).getClaims());
+    @Nested
+    class IsExpired {
+        @Test void futureExpAsInt_false()   { Map<String, Object> c = new HashMap<>(); c.put("exp", (int) Instant.now().plusSeconds(3600).getEpochSecond()); assertFalse(JwtUtils.isExpired(c)); }
+        @Test void futureExpAsLong_false()  { Map<String, Object> c = new HashMap<>(); c.put("exp", Instant.now().plusSeconds(3600).getEpochSecond()); assertFalse(JwtUtils.isExpired(c)); }
+        @Test void pastExp_true()           { Map<String, Object> c = new HashMap<>(); c.put("exp", (int) Instant.now().minusSeconds(3600).getEpochSecond()); assertTrue(JwtUtils.isExpired(c)); }
+        @Test void missingExp_true()        { assertTrue(JwtUtils.isExpired(new HashMap<>())); }
     }
 
-    @Test
-    void success_errorMessageIsNull() {
-        assertNull(ValidationResult.success(Map.of()).getErrorMessage());
+    @Nested
+    class MatchesSinglePattern {
+        @Test void wildcardSubdomain_matches()       { assertTrue(JwtUtils.matchesSinglePattern("https://dev.abc.com/oauth2/default", "*.abc.com")); }
+        @Test void wildcardDeepSubdomain_matches()   { assertTrue(JwtUtils.matchesSinglePattern("https://dev.okta.abc.com/oauth2/default", "*.abc.com")); }
+        @Test void differentDomain_noMatch()         { assertFalse(JwtUtils.matchesSinglePattern("https://dev.xyz.com/oauth2/default", "*.abc.com")); }
+        @Test void rootDomain_noMatch()              { assertFalse(JwtUtils.matchesSinglePattern("https://abc.com/oauth2/default", "*.abc.com")); }
+        @Test void nullIssuer_false()                { assertFalse(JwtUtils.matchesSinglePattern(null, "*.abc.com")); }
+        @Test void nullPattern_false()               { assertFalse(JwtUtils.matchesSinglePattern("https://dev.abc.com", null)); }
+        @Test void malformedUri_false()              { assertFalse(JwtUtils.matchesSinglePattern("not a uri", "*.abc.com")); }
+        @Test void caseInsensitive()                 { assertTrue(JwtUtils.matchesSinglePattern("https://DEV.ABC.COM/oauth2/default", "*.abc.com")); }
+        @Test void pathIgnored()                     { assertTrue(JwtUtils.matchesSinglePattern("https://dev.abc.com/some/path", "*.abc.com")); }
+        @Test void exactMatch_noWildcard()           { assertTrue(JwtUtils.matchesSinglePattern("https://uatabctech.oktapreview.com/oauth2/default", "uatabctech.oktapreview.com")); }
+        @Test void exactMatch_wrongHost_noMatch()    { assertFalse(JwtUtils.matchesSinglePattern("https://dev.oktapreview.com/oauth2/default", "uatabctech.oktapreview.com")); }
     }
 
-    @Test
-    void failure_isValidFalse() {
-        assertFalse(ValidationResult.failure("expired").isValid());
+    @Nested
+    class MatchesAnyPattern {
+
+        private static final List<String> PATTERNS = List.of(
+            "*.abc.com",
+            "*.oktapreview.com",
+            "uatabctech.oktapreview.com"
+        );
+
+        @Test void matchesFirstPattern()            { assertTrue(JwtUtils.matchesAnyPattern("https://dev.abc.com/oauth2/default", PATTERNS)); }
+        @Test void matchesSecondPattern()           { assertTrue(JwtUtils.matchesAnyPattern("https://dev.oktapreview.com/oauth2/default", PATTERNS)); }
+        @Test void matchesThirdPatternExact()       { assertTrue(JwtUtils.matchesAnyPattern("https://uatabctech.oktapreview.com/oauth2/default", PATTERNS)); }
+        @Test void matchesNone_returnsFalse()       { assertFalse(JwtUtils.matchesAnyPattern("https://dev.evil.com/oauth2/default", PATTERNS)); }
+        @Test void emptyPatternList_returnsFalse()  { assertFalse(JwtUtils.matchesAnyPattern("https://dev.abc.com/oauth2/default", Collections.emptyList())); }
+        @Test void nullPatternList_returnsFalse()   { assertFalse(JwtUtils.matchesAnyPattern("https://dev.abc.com/oauth2/default", null)); }
+        @Test void nullIssuer_returnsFalse()        { assertFalse(JwtUtils.matchesAnyPattern(null, PATTERNS)); }
+
+        @Test
+        void singlePattern_list_works() {
+            assertTrue(JwtUtils.matchesAnyPattern("https://dev.abc.com/oauth2/default", List.of("*.abc.com")));
+        }
     }
 
-    @Test
-    void failure_errorMessagePopulated() {
-        assertEquals("expired", ValidationResult.failure("expired").getErrorMessage());
-    }
+    @Nested
+    class FindMatchingPattern {
 
-    @Test
-    void failure_claimsIsNull() {
-        assertNull(ValidationResult.failure("expired").getClaims());
+        private static final List<String> PATTERNS = List.of("*.abc.com", "*.oktapreview.com");
+
+        @Test void returnsMatchedPattern()          { assertEquals("*.abc.com", JwtUtils.findMatchingPattern("https://dev.abc.com/oauth2/default", PATTERNS)); }
+        @Test void returnsSecondMatchedPattern()    { assertEquals("*.oktapreview.com", JwtUtils.findMatchingPattern("https://dev.oktapreview.com/oauth2/default", PATTERNS)); }
+        @Test void returnsNullWhenNoMatch()         { assertNull(JwtUtils.findMatchingPattern("https://dev.evil.com/oauth2/default", PATTERNS)); }
+        @Test void returnsNullForEmptyList()        { assertNull(JwtUtils.findMatchingPattern("https://dev.abc.com/oauth2/default", Collections.emptyList())); }
+        @Test void returnsNullForNullList()         { assertNull(JwtUtils.findMatchingPattern("https://dev.abc.com/oauth2/default", null)); }
     }
 }
 
 // =============================================================================
-// UriValidationStrategyTest
+// Option 1 — ExpiryOnlyValidationStrategyTest
+// =============================================================================
+
+class ExpiryOnlyValidationStrategyTest {
+
+    private ExpiryOnlyValidationStrategy strategy;
+
+    @BeforeEach
+    void setUp() { strategy = new ExpiryOnlyValidationStrategy(); }
+
+    @Nested
+    class ValidToken {
+        @Test void nonExpired_returnsSuccess()  { assertTrue(strategy.validate(JwtTestBuilder.valid(null)).isValid()); }
+        @Test void subjectInClaims()            { assertEquals("user@example.com", strategy.validate(JwtTestBuilder.valid(null)).getClaims().get("sub")); }
+        @Test void anyIssuerAccepted()          { assertTrue(strategy.validate(JwtTestBuilder.valid("https://any.evil.com")).isValid()); }
+        @Test void noIssuerAccepted()           { assertTrue(strategy.validate(JwtTestBuilder.noIssuer()).isValid()); }
+    }
+
+    @Nested
+    class InvalidToken {
+        @Test void expired_returnsFailure()          { assertFalse(strategy.validate(JwtTestBuilder.expired(null)).isValid()); }
+        @Test void expired_errorContainsExpired()    { assertTrue(strategy.validate(JwtTestBuilder.expired(null)).getErrorMessage().contains("expired")); }
+        @Test void noExpClaim_returnsFailure()        { assertFalse(strategy.validate(JwtTestBuilder.noExp(null)).isValid()); }
+        @Test void malformed_twoParts_failure()      { assertFalse(strategy.validate("header.payload").isValid()); }
+        @Test void malformed_errorContainsMalformed(){ assertTrue(strategy.validate("header.payload").getErrorMessage().contains("Malformed")); }
+    }
+}
+
+// =============================================================================
+// Option 2 — UriValidationStrategyTest
 // =============================================================================
 
 @ExtendWith(MockitoExtension.class)
@@ -160,35 +304,20 @@ class UriValidationStrategyTest {
 
     @Nested
     class Constructor {
-        @Test
-        void throwsWhenVerifiersNull() {
-            assertThrows(IllegalArgumentException.class,
-                () -> new UriValidationStrategy(null));
-        }
-
-        @Test
-        void throwsWhenVerifiersEmpty() {
-            assertThrows(IllegalArgumentException.class,
-                () -> new UriValidationStrategy(Collections.emptyList()));
-        }
-
-        @Test
-        void succeedsWithOneVerifier() {
-            assertDoesNotThrow(() -> new UriValidationStrategy(List.of(verifier1)));
-        }
+        @Test void throwsWhenNull()      { assertThrows(IllegalArgumentException.class, () -> new UriValidationStrategy(null)); }
+        @Test void throwsWhenEmpty()     { assertThrows(IllegalArgumentException.class, () -> new UriValidationStrategy(Collections.emptyList())); }
+        @Test void succeedsWithOne()     { assertDoesNotThrow(() -> new UriValidationStrategy(List.of(verifier1))); }
+        @Test void succeedsWithTwo()     { assertDoesNotThrow(() -> new UriValidationStrategy(List.of(verifier1, verifier2))); }
     }
 
     @Nested
     class Validate {
         @Test
-        void firstVerifierMatches_returnsSuccess() throws Exception {
+        void firstVerifierMatches_noSecondCall() throws Exception {
             UriValidationStrategy strategy = new UriValidationStrategy(List.of(verifier1, verifier2));
             when(verifier1.decode("token")).thenReturn(mockJwt);
             when(mockJwt.getClaims()).thenReturn(Map.of("sub", "user@example.com"));
-
-            ValidationResult result = strategy.validate("token");
-
-            assertTrue(result.isValid());
+            assertTrue(strategy.validate("token").isValid());
             verify(verifier2, never()).decode(any());
         }
 
@@ -198,12 +327,7 @@ class UriValidationStrategyTest {
             when(verifier1.decode("token")).thenThrow(new JwtVerificationException("wrong issuer"));
             when(verifier2.decode("token")).thenReturn(mockJwt);
             when(mockJwt.getClaims()).thenReturn(Map.of("sub", "user@example.com"));
-
-            ValidationResult result = strategy.validate("token");
-
-            assertTrue(result.isValid());
-            verify(verifier1).decode("token");
-            verify(verifier2).decode("token");
+            assertTrue(strategy.validate("token").isValid());
         }
 
         @Test
@@ -211,302 +335,228 @@ class UriValidationStrategyTest {
             UriValidationStrategy strategy = new UriValidationStrategy(List.of(verifier1, verifier2));
             when(verifier1.decode("token")).thenThrow(new JwtVerificationException("expired"));
             when(verifier2.decode("token")).thenThrow(new JwtVerificationException("bad sig"));
-
             assertFalse(strategy.validate("token").isValid());
         }
 
         @Test
-        void claimsAreCopiedFromOktaJwt() throws Exception {
+        void claimsAreCopied() throws Exception {
             UriValidationStrategy strategy = new UriValidationStrategy(List.of(verifier1));
-            Map<String, Object> claims = Map.of("sub", "user@example.com", "scp", List.of("read:items"));
+            Map<String, Object> claims = Map.of("sub", "user@example.com", "iss", "https://dev.okta.com");
             when(verifier1.decode("token")).thenReturn(mockJwt);
             when(mockJwt.getClaims()).thenReturn(claims);
-
             assertEquals(claims, strategy.validate("token").getClaims());
         }
     }
 }
 
 // =============================================================================
-// PatternValidationStrategyTest
+// Option 3 — PatternValidationStrategyTest
 // =============================================================================
 
 class PatternValidationStrategyTest {
 
-    private PatternValidationStrategy strategy;
-
-    private String buildJwt(Long expEpochSecond, String issuer, String extraClaims) {
-        String header  = Base64.getUrlEncoder().withoutPadding()
-            .encodeToString("{\"alg\":\"RS256\"}".getBytes());
-        String payloadJson = "{\"sub\":\"user@example.com\""
-            + (issuer != null ? ",\"iss\":\"" + issuer + "\"" : "")
-            + (expEpochSecond != null ? ",\"exp\":" + expEpochSecond : "")
-            + (extraClaims != null ? "," + extraClaims : "")
-            + "}";
-        String payload = Base64.getUrlEncoder().withoutPadding()
-            .encodeToString(payloadJson.getBytes());
-        return header + "." + payload + ".fakesig";
-    }
+    private static final List<String> MULTI_PATTERNS = List.of(
+        "*.abc.com",
+        "*.oktapreview.com",
+        "uatabctech.oktapreview.com"
+    );
 
     @Nested
     class Constructor {
-        @Test
-        void throwsWhenPatternNull() {
-            assertThrows(IllegalArgumentException.class,
-                () -> new PatternValidationStrategy(null));
-        }
-
-        @Test
-        void throwsWhenPatternBlank() {
-            assertThrows(IllegalArgumentException.class,
-                () -> new PatternValidationStrategy("   "));
-        }
-
-        @Test
-        void succeedsWithValidPattern() {
-            assertDoesNotThrow(() -> new PatternValidationStrategy("*.abc.com"));
-        }
+        @Test void throwsWhenNull()          { assertThrows(IllegalArgumentException.class, () -> new PatternValidationStrategy(null)); }
+        @Test void throwsWhenEmpty()         { assertThrows(IllegalArgumentException.class, () -> new PatternValidationStrategy(Collections.emptyList())); }
+        @Test void succeedsWithOnePattern()  { assertDoesNotThrow(() -> new PatternValidationStrategy(List.of("*.abc.com"))); }
+        @Test void succeedsWithMultiple()    { assertDoesNotThrow(() -> new PatternValidationStrategy(MULTI_PATTERNS)); }
+        @Test void storesPatterns()          { assertEquals(3, new PatternValidationStrategy(MULTI_PATTERNS).getIssuerHostPatterns().size()); }
+        @Test void trimsPatterns()           { assertEquals("*.abc.com", new PatternValidationStrategy(List.of("  *.abc.com  ")).getIssuerHostPatterns().get(0)); }
     }
 
     @Nested
-    class MatchesPattern {
+    class SinglePatternValidation {
+
+        private PatternValidationStrategy strategy;
 
         @BeforeEach
-        void setUp() { strategy = new PatternValidationStrategy("*.abc.com"); }
+        void setUp() { strategy = new PatternValidationStrategy(List.of("*.abc.com")); }
 
-        @Test
-        void subdomain_matches()                { assertTrue(strategy.matchesPattern("https://dev.abc.com/oauth2/default")); }
-        @Test
-        void deepSubdomain_matches()            { assertTrue(strategy.matchesPattern("https://dev.okta.abc.com/oauth2/default")); }
-        @Test
-        void differentDomain_noMatch()          { assertFalse(strategy.matchesPattern("https://dev.xyz.com/oauth2/default")); }
-        @Test
-        void exactDomain_noMatch()              { assertFalse(strategy.matchesPattern("https://abc.com/oauth2/default")); }
-        @Test
-        void nullIssuer_returnsFalse()          { assertFalse(strategy.matchesPattern(null)); }
-        @Test
-        void malformedUri_returnsFalse()        { assertFalse(strategy.matchesPattern("not a uri")); }
-
-        @Test
-        void exactPatternWithoutWildcard_exactMatch() {
-            PatternValidationStrategy exact = new PatternValidationStrategy("auth.abc.com");
-            assertTrue(exact.matchesPattern("https://auth.abc.com/oauth2/default"));
-            assertFalse(exact.matchesPattern("https://dev.abc.com/oauth2/default"));
-        }
-
-        @Test
-        void pathIsIgnored_onlyHostMatters() {
-            assertTrue(strategy.matchesPattern("https://dev.abc.com/some/deep/path"));
-        }
-
-        @Test
-        void caseInsensitiveMatch() {
-            assertTrue(strategy.matchesPattern("https://DEV.ABC.COM/oauth2/default"));
-        }
+        @Test void matchingIssuer_returnsSuccess()     { assertTrue(strategy.validate(JwtTestBuilder.valid("https://dev.abc.com/oauth2/default")).isValid()); }
+        @Test void nonMatchingIssuer_returnsFailure()  { assertFalse(strategy.validate(JwtTestBuilder.valid("https://dev.xyz.com/oauth2/default")).isValid()); }
+        @Test void expired_returnsFailure()            { assertFalse(strategy.validate(JwtTestBuilder.expired("https://dev.abc.com/oauth2/default")).isValid()); }
+        @Test void noIssuerClaim_returnsFailure()      { assertFalse(strategy.validate(JwtTestBuilder.noIssuer()).isValid()); }
+        @Test void noExpClaim_returnsFailure()          { assertFalse(strategy.validate(JwtTestBuilder.noExp("https://dev.abc.com/oauth2/default")).isValid()); }
+        @Test void malformed_returnsFailure()          { assertFalse(strategy.validate("not.valid").isValid()); }
     }
 
     @Nested
-    class ValidToken {
+    class MultiPatternValidation {
+
+        private PatternValidationStrategy strategy;
 
         @BeforeEach
-        void setUp() { strategy = new PatternValidationStrategy("*.abc.com"); }
+        void setUp() { strategy = new PatternValidationStrategy(MULTI_PATTERNS); }
 
-        @Test
-        void validIssuerAndExpiry_returnsSuccess() {
-            String token = buildJwt(Instant.now().plusSeconds(3600).getEpochSecond(),
-                "https://dev.abc.com/oauth2/default", null);
-            assertTrue(strategy.validate(token).isValid());
+        @Test void matchesFirstPattern_abcDomain() {
+            assertTrue(strategy.validate(JwtTestBuilder.valid("https://dev.abc.com/oauth2/default")).isValid());
         }
 
-        @Test
-        void validToken_subjectInClaims() {
-            String token = buildJwt(Instant.now().plusSeconds(3600).getEpochSecond(),
-                "https://dev.abc.com/oauth2/default", null);
-            assertEquals("user@example.com", strategy.validate(token).getClaims().get("sub"));
+        @Test void matchesFirstPattern_differentAbcSubdomain() {
+            assertTrue(strategy.validate(JwtTestBuilder.valid("https://prod.abc.com/oauth2/default")).isValid());
         }
 
-        @Test
-        void validToken_issuerInClaims() {
-            String token = buildJwt(Instant.now().plusSeconds(3600).getEpochSecond(),
-                "https://dev.abc.com/oauth2/default", null);
-            assertEquals("https://dev.abc.com/oauth2/default",
-                strategy.validate(token).getClaims().get("iss"));
-        }
-    }
-
-    @Nested
-    class InvalidToken {
-
-        @BeforeEach
-        void setUp() { strategy = new PatternValidationStrategy("*.abc.com"); }
-
-        @Test
-        void expiredToken_returnsFailure() {
-            String token = buildJwt(Instant.now().minusSeconds(3600).getEpochSecond(),
-                "https://dev.abc.com/oauth2/default", null);
-            assertFalse(strategy.validate(token).isValid());
-            assertTrue(strategy.validate(token).getErrorMessage().contains("expired"));
+        @Test void matchesSecondPattern_oktapreviewWildcard() {
+            assertTrue(strategy.validate(JwtTestBuilder.valid("https://dev.oktapreview.com/oauth2/default")).isValid());
         }
 
-        @Test
-        void noExpClaim_returnsFailure() {
-            String token = buildJwt(null, "https://dev.abc.com/oauth2/default", null);
-            assertFalse(strategy.validate(token).isValid());
+        @Test void matchesThirdPattern_exactHost() {
+            assertTrue(strategy.validate(JwtTestBuilder.valid("https://uatabctech.oktapreview.com/oauth2/default")).isValid());
         }
 
-        @Test
-        void issuerDoesNotMatchPattern_returnsFailure() {
-            String token = buildJwt(Instant.now().plusSeconds(3600).getEpochSecond(),
-                "https://dev.xyz.com/oauth2/default", null);
-            ValidationResult result = strategy.validate(token);
-            assertFalse(result.isValid());
-            assertTrue(result.getErrorMessage().contains("does not match"));
+        @Test void noMatchInAnyPattern_returnsFailure() {
+            ValidationResult r = strategy.validate(JwtTestBuilder.valid("https://dev.evil.com/oauth2/default"));
+            assertFalse(r.isValid());
+            assertTrue(r.getErrorMessage().contains("did not match any configured host pattern"));
         }
 
-        @Test
-        void missingIssuerClaim_returnsFailure() {
-            String token = buildJwt(Instant.now().plusSeconds(3600).getEpochSecond(), null, null);
-            ValidationResult result = strategy.validate(token);
-            assertFalse(result.isValid());
-            assertTrue(result.getErrorMessage().contains("missing"));
+        @Test void expiredToken_matchingPattern_returnsFailure() {
+            assertFalse(strategy.validate(JwtTestBuilder.expired("https://dev.abc.com/oauth2/default")).isValid());
         }
 
-        @Test
-        void malformedToken_returnsFailure() {
-            assertFalse(strategy.validate("not.valid").isValid());
-            assertTrue(strategy.validate("not.valid").getErrorMessage().contains("Malformed"));
-        }
-    }
-
-    @Nested
-    class IsExpired {
-
-        @BeforeEach
-        void setUp() { strategy = new PatternValidationStrategy("*.abc.com"); }
-
-        @Test
-        void futureExp_returnsFalse() {
-            Map<String, Object> claims = new HashMap<>();
-            claims.put("exp", (int)(Instant.now().plusSeconds(3600).getEpochSecond()));
-            assertFalse(strategy.isExpired(claims));
-        }
-
-        @Test
-        void pastExp_returnsTrue() {
-            Map<String, Object> claims = new HashMap<>();
-            claims.put("exp", (int)(Instant.now().minusSeconds(3600).getEpochSecond()));
-            assertTrue(strategy.isExpired(claims));
-        }
-
-        @Test
-        void missingExp_returnsTrue() {
-            assertTrue(strategy.isExpired(new HashMap<>()));
-        }
-
-        @Test
-        void expAsLong_handledCorrectly() {
-            Map<String, Object> claims = new HashMap<>();
-            claims.put("exp", Instant.now().plusSeconds(3600).getEpochSecond());
-            assertFalse(strategy.isExpired(claims));
+        @Test void missingIssuer_returnsFailure() {
+            ValidationResult r = strategy.validate(JwtTestBuilder.noIssuer());
+            assertFalse(r.isValid());
+            assertTrue(r.getErrorMessage().contains("missing"));
         }
     }
 }
 
 // =============================================================================
-// ExpiryOnlyValidationStrategyTest
+// Option 4 — DynamicIssuerValidationStrategyTest
 // =============================================================================
 
-class ExpiryOnlyValidationStrategyTest {
+class DynamicIssuerValidationStrategyTest {
 
-    private ExpiryOnlyValidationStrategy strategy;
+    private static final List<String> MULTI_PATTERNS = List.of(
+        "*.abc.com",
+        "*.oktapreview.com",
+        "uatabctech.oktapreview.com"
+    );
 
-    @BeforeEach
-    void setUp() { strategy = new ExpiryOnlyValidationStrategy(); }
-
-    private String buildJwt(Long expEpochSecond, String extraClaims) {
-        String header  = Base64.getUrlEncoder().withoutPadding()
-            .encodeToString("{\"alg\":\"RS256\"}".getBytes());
-        String payloadJson = "{\"sub\":\"user@example.com\""
-            + (expEpochSecond != null ? ",\"exp\":" + expEpochSecond : "")
-            + (extraClaims != null ? "," + extraClaims : "")
-            + "}";
-        String payload = Base64.getUrlEncoder().withoutPadding()
-            .encodeToString(payloadJson.getBytes());
-        return header + "." + payload + ".fakesig";
+    @Nested
+    class Constructor {
+        @Test void throwsWhenPatternsNull()     { assertThrows(IllegalArgumentException.class, () -> new DynamicIssuerValidationStrategy(null, "abc")); }
+        @Test void throwsWhenPatternsEmpty()    { assertThrows(IllegalArgumentException.class, () -> new DynamicIssuerValidationStrategy(Collections.emptyList(), "abc")); }
+        @Test void succeedsWithOnePattern()     { assertDoesNotThrow(() -> new DynamicIssuerValidationStrategy(List.of("*.abc.com"), "abc-application")); }
+        @Test void succeedsWithMultiplePatterns(){ assertDoesNotThrow(() -> new DynamicIssuerValidationStrategy(MULTI_PATTERNS, "abc-application")); }
+        @Test void succeedsWithNullAudience()   { assertDoesNotThrow(() -> new DynamicIssuerValidationStrategy(List.of("*.abc.com"), null)); }
+        @Test void storesPatterns()             { assertEquals(3, new DynamicIssuerValidationStrategy(MULTI_PATTERNS, "abc").getIssuerHostPatterns().size()); }
+        @Test void storesAudience()             { assertEquals("abc-application", new DynamicIssuerValidationStrategy(List.of("*.abc.com"), "abc-application").getAudience()); }
+        @Test void cacheStartsEmpty()           { assertEquals(0, new DynamicIssuerValidationStrategy(List.of("*.abc.com"), "abc").getCacheSize()); }
     }
 
     @Nested
-    class ValidToken {
-        @Test
-        void nonExpiredToken_returnsSuccess() {
-            assertTrue(strategy.validate(buildJwt(Instant.now().plusSeconds(3600).getEpochSecond(), null)).isValid());
+    class MalformedToken {
+
+        private DynamicIssuerValidationStrategy strategy;
+
+        @BeforeEach
+        void setUp() { strategy = new DynamicIssuerValidationStrategy(MULTI_PATTERNS, "abc-application"); }
+
+        @Test void twoParts_returnsFailure()        { assertFalse(strategy.validate("header.payload").isValid()); }
+        @Test void fourParts_returnsFailure()        { assertFalse(strategy.validate("a.b.c.d").isValid()); }
+        @Test void errorContainsMalformed()          { assertTrue(strategy.validate("header.payload").getErrorMessage().contains("Malformed")); }
+    }
+
+    @Nested
+    class MissingIssuer {
+
+        private DynamicIssuerValidationStrategy strategy;
+
+        @BeforeEach
+        void setUp() { strategy = new DynamicIssuerValidationStrategy(MULTI_PATTERNS, "abc-application"); }
+
+        @Test void noIssClaim_returnsFailure() {
+            ValidationResult r = strategy.validate(JwtTestBuilder.noIssuer());
+            assertFalse(r.isValid());
+            assertTrue(r.getErrorMessage().contains("missing"));
+        }
+    }
+
+    @Nested
+    class PatternMismatch {
+
+        private DynamicIssuerValidationStrategy strategy;
+
+        @BeforeEach
+        void setUp() { strategy = new DynamicIssuerValidationStrategy(MULTI_PATTERNS, "abc-application"); }
+
+        @Test void wrongDomain_rejectsWithoutNetworkCall() {
+            ValidationResult r = strategy.validate(JwtTestBuilder.valid("https://dev.evil.com/oauth2/default"));
+            assertFalse(r.isValid());
+            assertTrue(r.getErrorMessage().contains("did not match any configured host pattern"));
+            assertEquals(0, strategy.getCacheSize());
         }
 
-        @Test
-        void validToken_subjectInClaims() {
-            assertEquals("user@example.com",
-                strategy.validate(buildJwt(Instant.now().plusSeconds(3600).getEpochSecond(), null))
-                    .getClaims().get("sub"));
+        @Test void allPatternsChecked_noneMatch() {
+            // Issuer that does not match *.abc.com, *.oktapreview.com, or exact uatabctech.oktapreview.com
+            assertFalse(strategy.validate(JwtTestBuilder.valid("https://dev.notallowed.com/oauth2/default")).isValid());
+            assertEquals(0, strategy.getCacheSize());
+        }
+
+        @Test void expiredTokenWithWrongDomain_failsOnPattern() {
+            // Pattern check happens before expiry check
+            ValidationResult r = strategy.validate(JwtTestBuilder.expired("https://dev.evil.com/oauth2/default"));
+            assertFalse(r.isValid());
+            assertTrue(r.getErrorMessage().contains("did not match any configured host pattern"));
+        }
+    }
+
+    @Nested
+    class MultiPatternMatching {
+
+        private DynamicIssuerValidationStrategy strategy;
+
+        @BeforeEach
+        void setUp() { strategy = new DynamicIssuerValidationStrategy(MULTI_PATTERNS, "abc-application"); }
+
+        @Test void firstPatternMatch_abcDomain_proceedsToVerifier() {
+            // Token passes pattern check (dev.abc.com matches *.abc.com)
+            // Then expired check catches it before network call
+            ValidationResult r = strategy.validate(JwtTestBuilder.expired("https://dev.abc.com/oauth2/default"));
+            assertFalse(r.isValid());
+            assertTrue(r.getErrorMessage().contains("expired"));  // not "did not match"
+        }
+
+        @Test void secondPatternMatch_oktapreview_proceedsToVerifier() {
+            ValidationResult r = strategy.validate(JwtTestBuilder.expired("https://qa.oktapreview.com/oauth2/default"));
+            assertFalse(r.isValid());
+            assertTrue(r.getErrorMessage().contains("expired"));
+        }
+
+        @Test void thirdPatternMatch_exactHost_proceedsToVerifier() {
+            ValidationResult r = strategy.validate(JwtTestBuilder.expired("https://uatabctech.oktapreview.com/oauth2/default"));
+            assertFalse(r.isValid());
+            assertTrue(r.getErrorMessage().contains("expired"));
         }
     }
 
     @Nested
     class ExpiredToken {
-        @Test
-        void expiredToken_returnsFailure() {
-            assertFalse(strategy.validate(buildJwt(Instant.now().minusSeconds(3600).getEpochSecond(), null)).isValid());
+
+        private DynamicIssuerValidationStrategy strategy;
+
+        @BeforeEach
+        void setUp() { strategy = new DynamicIssuerValidationStrategy(MULTI_PATTERNS, "abc-application"); }
+
+        @Test void expiredTokenWithValidPattern_failsBeforeJwksFetch() {
+            ValidationResult r = strategy.validate(JwtTestBuilder.expired("https://dev.abc.com/oauth2/default"));
+            assertFalse(r.isValid());
+            assertTrue(r.getErrorMessage().contains("expired"));
+            assertEquals(0, strategy.getCacheSize());  // no verifier built
         }
 
-        @Test
-        void expiredToken_errorMessageContainsExpired() {
-            assertTrue(strategy.validate(buildJwt(Instant.now().minusSeconds(3600).getEpochSecond(), null))
-                .getErrorMessage().contains("expired"));
-        }
-
-        @Test
-        void noExpClaim_returnsFailure() {
-            assertFalse(strategy.validate(buildJwt(null, null)).isValid());
-        }
-    }
-
-    @Nested
-    class MalformedToken {
-        @Test
-        void twoParts_returnsFailure()                    { assertFalse(strategy.validate("header.payload").isValid()); }
-        @Test
-        void fourParts_returnsFailure()                   { assertFalse(strategy.validate("a.b.c.d").isValid()); }
-        @Test
-        void invalidBase64Payload_returnsFailure()        { assertFalse(strategy.validate("header.!!!.sig").isValid()); }
-        @Test
-        void malformedToken_errorContainsMalformed() {
-            assertTrue(strategy.validate("header.payload").getErrorMessage().contains("Malformed"));
-        }
-    }
-
-    @Nested
-    class IsExpired {
-        @Test
-        void futureExp_returnsFalse() {
-            Map<String, Object> claims = new HashMap<>();
-            claims.put("exp", (int)(Instant.now().plusSeconds(3600).getEpochSecond()));
-            assertFalse(strategy.isExpired(claims));
-        }
-
-        @Test
-        void pastExp_returnsTrue() {
-            Map<String, Object> claims = new HashMap<>();
-            claims.put("exp", (int)(Instant.now().minusSeconds(3600).getEpochSecond()));
-            assertTrue(strategy.isExpired(claims));
-        }
-
-        @Test
-        void missingExp_returnsTrue()  { assertTrue(strategy.isExpired(new HashMap<>())); }
-
-        @Test
-        void expAsLong_handledCorrectly() {
-            Map<String, Object> claims = new HashMap<>();
-            claims.put("exp", Instant.now().plusSeconds(3600).getEpochSecond());
-            assertFalse(strategy.isExpired(claims));
+        @Test void noExpClaim_returnsFailure() {
+            assertFalse(strategy.validate(JwtTestBuilder.noExp("https://dev.abc.com/oauth2/default")).isValid());
+            assertEquals(0, strategy.getCacheSize());
         }
     }
 }
@@ -525,25 +575,15 @@ class OktaJwtAuthFilterTest {
     private MockHttpServletResponse response;
 
     @BeforeEach
-    void setUp() {
-        response = new MockHttpServletResponse();
-        SecurityContextHolder.clearContext();
-    }
+    void setUp() { response = new MockHttpServletResponse(); SecurityContextHolder.clearContext(); }
 
     @AfterEach
     void tearDown() { SecurityContextHolder.clearContext(); }
 
     @Nested
     class Constructor {
-        @Test
-        void throwsWhenStrategyNull() {
-            assertThrows(IllegalArgumentException.class, () -> new OktaJwtAuthFilter(null));
-        }
-
-        @Test
-        void succeedsWithValidStrategy() {
-            assertDoesNotThrow(() -> new OktaJwtAuthFilter(strategy));
-        }
+        @Test void throwsWhenNull()  { assertThrows(IllegalArgumentException.class, () -> new OktaJwtAuthFilter(null)); }
+        @Test void succeeds()        { assertDoesNotThrow(() -> new OktaJwtAuthFilter(strategy)); }
     }
 
     @Nested
@@ -552,20 +592,16 @@ class OktaJwtAuthFilterTest {
         void nullHeader_passesThrough() throws Exception {
             OktaJwtAuthFilter filter = new OktaJwtAuthFilter(strategy);
             when(request.getHeader(HttpHeaders.AUTHORIZATION)).thenReturn(null);
-
             filter.doFilterInternal(request, response, filterChain);
-
             verify(filterChain).doFilter(request, response);
             verifyNoInteractions(strategy);
         }
 
         @Test
-        void basicAuthHeader_passesThrough() throws Exception {
+        void basicAuth_passesThrough() throws Exception {
             OktaJwtAuthFilter filter = new OktaJwtAuthFilter(strategy);
             when(request.getHeader(HttpHeaders.AUTHORIZATION)).thenReturn("Basic dXNlcjpwYXNz");
-
             filter.doFilterInternal(request, response, filterChain);
-
             verify(filterChain).doFilter(request, response);
             verifyNoInteractions(strategy);
         }
@@ -574,28 +610,20 @@ class OktaJwtAuthFilterTest {
     @Nested
     class ValidToken {
         @Test
-        void strategySuccess_setsAuthentication() throws Exception {
+        void success_setsAuthentication() throws Exception {
             OktaJwtAuthFilter filter = new OktaJwtAuthFilter(strategy);
             when(request.getHeader(HttpHeaders.AUTHORIZATION)).thenReturn("Bearer valid.token");
-            when(strategy.validate("valid.token"))
-                .thenReturn(ValidationResult.success(Map.of("sub", "user@example.com")));
-
+            when(strategy.validate("valid.token")).thenReturn(ValidationResult.success(Map.of("sub", "user@example.com")));
             filter.doFilterInternal(request, response, filterChain);
-
-            verify(filterChain).doFilter(request, response);
-            assertEquals("user@example.com",
-                SecurityContextHolder.getContext().getAuthentication().getPrincipal());
+            assertEquals("user@example.com", SecurityContextHolder.getContext().getAuthentication().getPrincipal());
         }
 
         @Test
-        void bearerTokenWithWhitespace_isTrimmed() throws Exception {
+        void whitespace_trimmed() throws Exception {
             OktaJwtAuthFilter filter = new OktaJwtAuthFilter(strategy);
             when(request.getHeader(HttpHeaders.AUTHORIZATION)).thenReturn("Bearer   valid.token");
-            when(strategy.validate("valid.token"))
-                .thenReturn(ValidationResult.success(Map.of("sub", "user@example.com")));
-
+            when(strategy.validate("valid.token")).thenReturn(ValidationResult.success(Map.of("sub", "user@example.com")));
             filter.doFilterInternal(request, response, filterChain);
-
             verify(strategy).validate("valid.token");
         }
 
@@ -603,42 +631,31 @@ class OktaJwtAuthFilterTest {
         void rawTokenStoredAsCredentials() throws Exception {
             OktaJwtAuthFilter filter = new OktaJwtAuthFilter(strategy);
             when(request.getHeader(HttpHeaders.AUTHORIZATION)).thenReturn("Bearer valid.token");
-            when(strategy.validate("valid.token"))
-                .thenReturn(ValidationResult.success(Map.of("sub", "user@example.com")));
-
+            when(strategy.validate("valid.token")).thenReturn(ValidationResult.success(Map.of("sub", "user@example.com")));
             filter.doFilterInternal(request, response, filterChain);
-
-            assertEquals("valid.token",
-                SecurityContextHolder.getContext().getAuthentication().getCredentials());
+            assertEquals("valid.token", SecurityContextHolder.getContext().getAuthentication().getCredentials());
         }
     }
 
     @Nested
     class InvalidToken {
         @Test
-        void strategyFailure_returns401() throws Exception {
+        void failure_returns401() throws Exception {
             OktaJwtAuthFilter filter = new OktaJwtAuthFilter(strategy);
             when(request.getHeader(HttpHeaders.AUTHORIZATION)).thenReturn("Bearer bad.token");
-            when(strategy.validate("bad.token"))
-                .thenReturn(ValidationResult.failure("Token rejected."));
-
+            when(strategy.validate("bad.token")).thenReturn(ValidationResult.failure("Token rejected."));
             filter.doFilterInternal(request, response, filterChain);
-
-            verify(filterChain, never()).doFilter(any(), any());
             assertEquals(401, response.getStatus());
             assertTrue(response.getContentAsString().contains("Token rejected."));
             assertNull(SecurityContextHolder.getContext().getAuthentication());
         }
 
         @Test
-        void unauthorizedResponse_containsErrorFields() throws Exception {
+        void response_hasJsonFields() throws Exception {
             OktaJwtAuthFilter filter = new OktaJwtAuthFilter(strategy);
             when(request.getHeader(HttpHeaders.AUTHORIZATION)).thenReturn("Bearer bad.token");
-            when(strategy.validate("bad.token"))
-                .thenReturn(ValidationResult.failure("Token has expired."));
-
+            when(strategy.validate("bad.token")).thenReturn(ValidationResult.failure("expired"));
             filter.doFilterInternal(request, response, filterChain);
-
             String body = response.getContentAsString();
             assertTrue(body.contains("\"error\""));
             assertTrue(body.contains("\"Unauthorized\""));
@@ -654,12 +671,9 @@ class OktaJwtAuthFilterTest {
             Map<String, Object> claims = new HashMap<>();
             claims.put("sub", "user@example.com");
             claims.put("scp", Arrays.asList("read:items", "write:items"));
-
             when(request.getHeader(HttpHeaders.AUTHORIZATION)).thenReturn("Bearer token");
             when(strategy.validate("token")).thenReturn(ValidationResult.success(claims));
-
             filter.doFilterInternal(request, response, filterChain);
-
             Authentication auth = SecurityContextHolder.getContext().getAuthentication();
             assertTrue(auth.getAuthorities().contains(new SimpleGrantedAuthority("SCOPE_read:items")));
             assertTrue(auth.getAuthorities().contains(new SimpleGrantedAuthority("SCOPE_write:items")));
@@ -671,221 +685,144 @@ class OktaJwtAuthFilterTest {
             Map<String, Object> claims = new HashMap<>();
             claims.put("sub", "user@example.com");
             claims.put("scp", "read:items write:items");
-
             when(request.getHeader(HttpHeaders.AUTHORIZATION)).thenReturn("Bearer token");
             when(strategy.validate("token")).thenReturn(ValidationResult.success(claims));
-
             filter.doFilterInternal(request, response, filterChain);
-
-            Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-            assertTrue(auth.getAuthorities().contains(new SimpleGrantedAuthority("SCOPE_read:items")));
+            assertTrue(SecurityContextHolder.getContext().getAuthentication()
+                .getAuthorities().contains(new SimpleGrantedAuthority("SCOPE_read:items")));
         }
 
         @Test
-        void noScopeClaim_emptyAuthorities() throws Exception {
+        void noScope_emptyAuthorities() throws Exception {
             OktaJwtAuthFilter filter = new OktaJwtAuthFilter(strategy);
             when(request.getHeader(HttpHeaders.AUTHORIZATION)).thenReturn("Bearer token");
-            when(strategy.validate("token"))
-                .thenReturn(ValidationResult.success(Map.of("sub", "user@example.com")));
-
+            when(strategy.validate("token")).thenReturn(ValidationResult.success(Map.of("sub", "user@example.com")));
             filter.doFilterInternal(request, response, filterChain);
-
             assertTrue(SecurityContextHolder.getContext().getAuthentication().getAuthorities().isEmpty());
         }
 
         @Test
-        void scopeUnexpectedType_emptyAuthorities() throws Exception {
+        void unexpectedScopeType_emptyAuthorities() throws Exception {
             OktaJwtAuthFilter filter = new OktaJwtAuthFilter(strategy);
             Map<String, Object> claims = new HashMap<>();
             claims.put("sub", "user@example.com");
-            claims.put("scp", 99999);
-
+            claims.put("scp", 12345);
             when(request.getHeader(HttpHeaders.AUTHORIZATION)).thenReturn("Bearer token");
             when(strategy.validate("token")).thenReturn(ValidationResult.success(claims));
-
             filter.doFilterInternal(request, response, filterChain);
-
             assertTrue(SecurityContextHolder.getContext().getAuthentication().getAuthorities().isEmpty());
         }
     }
 }
 
 // =============================================================================
-// WebSecurityConfigUnitTest
+// WebSecurityConfigTest
 // =============================================================================
 
-class WebSecurityConfigUnitTest {
+class WebSecurityConfigTest {
+
+    private static final List<String> MULTI_PATTERNS = List.of("*.abc.com", "*.oktapreview.com", "uatabctech.oktapreview.com");
 
     private OktaProperties buildProps(boolean issuerValidation, String validationType,
-                                       List<String> issuerUris, String pattern) {
+                                       List<String> issuerUris, List<String> patterns) {
         OktaProperties props = new OktaProperties();
         props.setAudience("abc-application");
         props.setIssuerValidation(issuerValidation);
         props.setValidationType(validationType);
         props.setIssuerUris(issuerUris);
-        props.setIssuerHostPattern(pattern);
+        props.setIssuerHostPatterns(patterns);
         return props;
     }
 
     @Nested
-    class IssuerValidationFalse {
-        @Test
-        void returnsExpiryOnlyStrategy() {
-            assertInstanceOf(ExpiryOnlyValidationStrategy.class,
-                new WebSecurityConfig(buildProps(false, "uri", null, null)).validationStrategy());
-        }
-
-        @Test
-        void ignoresValidationType() {
-            assertInstanceOf(ExpiryOnlyValidationStrategy.class,
-                new WebSecurityConfig(buildProps(false, "pattern", null, null)).validationStrategy());
-        }
-
-        @Test
-        void filterIsCreated() {
-            assertNotNull(new WebSecurityConfig(buildProps(false, "uri", null, null)).oktaJwtAuthFilter());
-        }
+    class Option1_ExpiryOnly {
+        @Test void returnsExpiryOnlyStrategy()          { assertInstanceOf(ExpiryOnlyValidationStrategy.class, new WebSecurityConfig(buildProps(false, "uri", null, null)).validationStrategy()); }
+        @Test void ignoresValidationType()              { assertInstanceOf(ExpiryOnlyValidationStrategy.class, new WebSecurityConfig(buildProps(false, "dynamic", null, null)).validationStrategy()); }
+        @Test void filterCreated()                      { assertNotNull(new WebSecurityConfig(buildProps(false, "uri", null, null)).oktaJwtAuthFilter()); }
     }
 
     @Nested
-    class ValidationTypeUri {
-        @Test
-        void returnsUriStrategy() {
+    class Option2_UriList {
+        @Test void returnsUriStrategy() {
             assertInstanceOf(UriValidationStrategy.class,
-                new WebSecurityConfig(buildProps(true, "uri",
-                    List.of("https://dev.okta.com/oauth2/default"), null)).validationStrategy());
+                new WebSecurityConfig(buildProps(true, "uri", List.of("https://dev.okta.com/oauth2/default"), null)).validationStrategy());
         }
 
-        @Test
-        void throwsWhenIssuerUrisNull() {
+        @Test void throwsWhenUrisNull() {
             assertThrows(IllegalStateException.class,
                 () -> new WebSecurityConfig(buildProps(true, "uri", null, null)).validationStrategy());
         }
 
-        @Test
-        void throwsWhenIssuerUrisEmpty() {
+        @Test void throwsWhenUrisEmpty() {
             assertThrows(IllegalStateException.class,
                 () -> new WebSecurityConfig(buildProps(true, "uri", Collections.emptyList(), null)).validationStrategy());
         }
 
-        @Test
-        void multipleUris_allBuilt() {
+        @Test void multipleUris_allBuilt() {
             assertDoesNotThrow(() -> new WebSecurityConfig(buildProps(true, "uri",
-                List.of("https://dev.okta.com/oauth2/default",
-                        "https://prod.okta.com/oauth2/default"), null)).validationStrategy());
+                List.of("https://dev.okta.com/oauth2/default", "https://prod.okta.com/oauth2/default"), null)).validationStrategy());
         }
     }
 
     @Nested
-    class ValidationTypePattern {
-        @Test
-        void returnsPatternStrategy() {
+    class Option3_Pattern {
+        @Test void returnsPatternStrategy_singlePattern() {
             assertInstanceOf(PatternValidationStrategy.class,
-                new WebSecurityConfig(buildProps(true, "pattern", null, "*.abc.com")).validationStrategy());
+                new WebSecurityConfig(buildProps(true, "pattern", null, List.of("*.abc.com"))).validationStrategy());
         }
 
-        @Test
-        void throwsWhenPatternNull() {
-            assertThrows(IllegalArgumentException.class,
+        @Test void returnsPatternStrategy_multiplePatterns() {
+            assertInstanceOf(PatternValidationStrategy.class,
+                new WebSecurityConfig(buildProps(true, "pattern", null, MULTI_PATTERNS)).validationStrategy());
+        }
+
+        @Test void throwsWhenPatternsNull() {
+            assertThrows(IllegalStateException.class,
                 () -> new WebSecurityConfig(buildProps(true, "pattern", null, null)).validationStrategy());
         }
 
-        @Test
-        void throwsWhenPatternBlank() {
-            assertThrows(IllegalArgumentException.class,
-                () -> new WebSecurityConfig(buildProps(true, "pattern", null, "  ")).validationStrategy());
+        @Test void throwsWhenPatternsEmpty() {
+            assertThrows(IllegalStateException.class,
+                () -> new WebSecurityConfig(buildProps(true, "pattern", null, Collections.emptyList())).validationStrategy());
+        }
+    }
+
+    @Nested
+    class Option4_Dynamic {
+        @Test void returnsDynamicStrategy_singlePattern() {
+            assertInstanceOf(DynamicIssuerValidationStrategy.class,
+                new WebSecurityConfig(buildProps(true, "dynamic", null, List.of("*.abc.com"))).validationStrategy());
         }
 
-        @Test
-        void specificSubdomainPattern_accepted() {
-            assertDoesNotThrow(() -> new WebSecurityConfig(
-                buildProps(true, "pattern", null, "*.okta.abc.com")).validationStrategy());
+        @Test void returnsDynamicStrategy_multiplePatterns() {
+            assertInstanceOf(DynamicIssuerValidationStrategy.class,
+                new WebSecurityConfig(buildProps(true, "dynamic", null, MULTI_PATTERNS)).validationStrategy());
+        }
+
+        @Test void throwsWhenPatternsNull() {
+            assertThrows(IllegalStateException.class,
+                () -> new WebSecurityConfig(buildProps(true, "dynamic", null, null)).validationStrategy());
+        }
+
+        @Test void throwsWhenPatternsEmpty() {
+            assertThrows(IllegalStateException.class,
+                () -> new WebSecurityConfig(buildProps(true, "dynamic", null, Collections.emptyList())).validationStrategy());
         }
     }
 
     @Nested
     class UnknownValidationType {
-        @Test
-        void throwsIllegalStateException() {
+        @Test void throwsIllegalStateException() {
             assertThrows(IllegalStateException.class,
                 () -> new WebSecurityConfig(buildProps(true, "unknown", null, null)).validationStrategy());
         }
 
-        @Test
-        void errorMessageContainsUnknownType() {
+        @Test void errorMessageListsSupportedTypes() {
             IllegalStateException ex = assertThrows(IllegalStateException.class,
                 () -> new WebSecurityConfig(buildProps(true, "unknown", null, null)).validationStrategy());
-            assertTrue(ex.getMessage().contains("unknown"));
+            assertTrue(ex.getMessage().contains("uri"));
+            assertTrue(ex.getMessage().contains("pattern"));
+            assertTrue(ex.getMessage().contains("dynamic"));
         }
     }
-}
-
-// =============================================================================
-// Integration Tests
-// =============================================================================
-
-@SpringBootTest
-@TestPropertySource(properties = {
-    "okta.audience=abc-application",
-    "okta.issuer-validation=true",
-    "okta.validation-type=uri",
-    "okta.issuer-uris[0]=https://dev.okta.com/oauth2/default",
-    "okta.issuer-uris[1]=https://prod.okta.com/oauth2/default"
-})
-class UriModeIntegrationTest {
-
-    @Autowired private SecurityFilterChain securityFilterChain;
-    @Autowired private ValidationStrategy validationStrategy;
-    @Autowired private OktaJwtAuthFilter oktaJwtAuthFilter;
-    @Autowired private OktaProperties oktaProperties;
-
-    @Test void contextLoads()                   { assertNotNull(securityFilterChain); }
-    @Test void strategyIsUri()                  { assertInstanceOf(UriValidationStrategy.class, validationStrategy); }
-    @Test void filterIsWired()                  { assertNotNull(oktaJwtAuthFilter); }
-    @Test void audienceIsLoaded()               { assertEquals("abc-application", oktaProperties.getAudience()); }
-    @Test void validationTypeIsUri()            { assertEquals("uri", oktaProperties.getValidationType()); }
-    @Test void issuerUrisHasTwoEntries()        { assertEquals(2, oktaProperties.getIssuerUris().size()); }
-    @Test void issuerHostPatternIsNull()        { assertNull(oktaProperties.getIssuerHostPattern()); }
-}
-
-@SpringBootTest
-@TestPropertySource(properties = {
-    "okta.audience=abc-application",
-    "okta.issuer-validation=true",
-    "okta.validation-type=pattern",
-    "okta.issuer-host-pattern=*.abc.com"
-})
-class PatternModeIntegrationTest {
-
-    @Autowired private SecurityFilterChain securityFilterChain;
-    @Autowired private ValidationStrategy validationStrategy;
-    @Autowired private OktaJwtAuthFilter oktaJwtAuthFilter;
-    @Autowired private OktaProperties oktaProperties;
-
-    @Test void contextLoads()                   { assertNotNull(securityFilterChain); }
-    @Test void strategyIsPattern()              { assertInstanceOf(PatternValidationStrategy.class, validationStrategy); }
-    @Test void filterIsWired()                  { assertNotNull(oktaJwtAuthFilter); }
-    @Test void patternIsLoaded()                { assertEquals("*.abc.com", oktaProperties.getIssuerHostPattern()); }
-    @Test void validationTypeIsPattern()        { assertEquals("pattern", oktaProperties.getValidationType()); }
-    @Test void issuerUrisAreNotRequired()       { assertNull(oktaProperties.getIssuerUris()); }
-}
-
-@SpringBootTest
-@TestPropertySource(properties = {
-    "okta.audience=abc-application",
-    "okta.issuer-validation=false"
-})
-class ExpiryOnlyModeIntegrationTest {
-
-    @Autowired private SecurityFilterChain securityFilterChain;
-    @Autowired private ValidationStrategy validationStrategy;
-    @Autowired private OktaJwtAuthFilter oktaJwtAuthFilter;
-    @Autowired private OktaProperties oktaProperties;
-
-    @Test void contextLoads()                   { assertNotNull(securityFilterChain); }
-    @Test void strategyIsExpiryOnly()           { assertInstanceOf(ExpiryOnlyValidationStrategy.class, validationStrategy); }
-    @Test void filterIsWired()                  { assertNotNull(oktaJwtAuthFilter); }
-    @Test void issuerValidationIsFalse()        { assertFalse(oktaProperties.isIssuerValidation()); }
-    @Test void issuerUrisNotRequired()          { assertNull(oktaProperties.getIssuerUris()); }
-    @Test void patternNotRequired()             { assertNull(oktaProperties.getIssuerHostPattern()); }
 }
